--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,19 @@
-body{
+body
+{
     color: blueviolet;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0;
+}
+
